<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CompleteMissionFragment">

    <RelativeLayout
        android:id="@+id/rel_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/ttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/congratulation_w"
            android:textSize="30sp"
            android:textColor="#000"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/animated_check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/ttxt"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/complete_message_w"
            android:textSize="22sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_add_user_fare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TextView
            android:id="@+id/ttxt_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/rest_of_fare_w"
            android:textSize="30sp"
            android:textColor="#000"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/edt_fare_Value"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="00000"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/ttxt_rest"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/edt_fare_Value"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/ttxt_rest"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/egp_w"
            android:textSize="20sp"
            android:textColor="#555"
            android:gravity="center"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_to_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:visibility="visible">
        <TextView
            android:id="@+id/txt_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_wallet_w"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/add_to_user_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_user_wallet_w"
            android:textColor="#3351F6"
            android:textSize="18sp"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/txt_fare"
            android:elevation="8dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/add_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/add_btn_w"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        android:background="@drawable/common_back"
        android:elevation="8dp"
        android:visibility="gone"/>


</RelativeLayout>