<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login_Activity">

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/login_w"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:background="@drawable/wlc_back"
        android:padding="5dp"
        android:gravity="center"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="13dp"
        app:cardMaxElevation="10dp"
        android:layout_centerInParent="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_w"
            android:textColor="#000"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_w"
            android:textColor="#000"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/common_back"
            app:cardMaxElevation="8dp"
            app:cardCornerRadius="13dp">
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_w"
                android:textSize="17sp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:background="@drawable/common_back"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_w"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_w"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#00f"
            />
    </LinearLayout>


</RelativeLayout>