<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Verify_Phone_Activity"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verification_w"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/txt_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Verify_txt_w"
        android:textSize="22sp"
        android:textColor="#FFF"
        android:textStyle="normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:inputType="text"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@+id/crd"
        android:layout_margin="15dp"
        android:background="@drawable/card_back"
        app:cardCornerRadius="13dp"
        app:cardMaxElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/card_back"
            >
            <LinearLayout
                android:id="@+id/lin_ph"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="10dp"
                >
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    />
                <EditText
                    android:id="@+id/driver_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:textColor="#000"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/etd_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verify_hint_w"
                android:textColor="#000"
                android:inputType="text"
                android:visibility="gone"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="13dp"
        android:layout_margin="30dp">
        <Button
            android:id="@+id/send_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_btn_w"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="#034D88"
            android:textAllCaps="false"
            />
    </androidx.cardview.widget.CardView>

</RelativeLayout>